feat: закончил с админ панелью и добавил ссылки на админ панель для администраторов

--- a/vue/public/scss/main.scss
+++ b/vue/public/scss/main.scss
@@ -7,3 +7,35 @@
     placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6
     p-2
 }
+
+.btn {
+    padding: 0.5rem 1rem;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 0.25rem;
+    cursor: pointer;
+  }
+.btn:disabled {
+    background-color: #ccc;
+  }
+
+  .search_input{
+    @apply w-full max-w-md mb-4
+  }
+
+  .pagination{
+    @apply flex justify-center mt-4
+  }
+
+  .action_href{
+    @apply font-medium text-blue-600 dark:text-blue-500 hover:underline
+  }
+
+  .table{
+    @apply w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400
+  }
+
+  .thead{
+    @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400
+  }
